[package]
name = "mtab"
version = "0.1.0"
edition = "2021"
authors = ["Guillem Castro <guillem@castrog.dev>"]
description = "A Rust library for parsing /etc/mtab"
readme = "README.md"
repository = "https://github.com/GuillemCastro/mtab-rs"
license = "MIT"
keywords = ["mtab", "fstab", "etc", "linux", "filesystem", "mount"]
categories = ["filesystem", "os::linux-apis"]
